RESOLVED FIXED129984
Inline the trivial parts of GC deferral.
https://bugs.webkit.org/show_bug.cgi?id=129984
Summary Inline the trivial parts of GC deferral.
Andreas Kling
Reported 2014-03-08 18:02:05 PST
DYEB spends about 1.5% in DeferGC. Inlining everything but collect() looks like a 1% progression on my MBP.
Attachments
Patch (3.28 KB, patch)
2014-03-08 18:03 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2014-03-08 18:03:05 PST
Geoffrey Garen
Comment 2 2014-03-09 12:24:05 PDT
Comment on attachment 226243 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-03-09 14:01:43 PDT
Comment on attachment 226243 [details] Patch Clearing flags on attachment: 226243 Committed r165355: <http://trac.webkit.org/changeset/165355>
WebKit Commit Bot
Comment 4 2014-03-09 14:01:47 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5 2014-03-09 18:00:46 PDT
Andreas Kling
Comment 6 2014-03-09 18:41:59 PDT
(In reply to comment #5) > One test crashing (in thread 2043!) after this: > http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK1%20(Tests)/r165356%20(13132)/results.html AFAICT that was crashing prior to this change, too.
Note You need to log in before you can comment on or make changes to this bug.