Inline the trivial parts of GC deferral. <https://webkit.org/b/129984>

Made most of the functions called by the DeferGC RAII object inline
to avoid function call overhead.

Looks like ~1% progression on DYEB.

Reviewed by Geoffrey Garen.

* heap/Heap.cpp:
* heap/Heap.h:
(JSC::Heap::incrementDeferralDepth):
(JSC::Heap::decrementDeferralDepth):
(JSC::Heap::collectIfNecessaryOrDefer):
(JSC::Heap::decrementDeferralDepthAndGCIfNeeded):


Canonical link: https://commits.webkit.org/147981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165355 268f45cc-cd09-0410-ab3c-d52691b4dbfc